Revert "Fix z-index"
This reverts commit 7ec9004f0596250b200aa0b6e98fe18cd9a76ab6.

--- a/front-end/src/components/Complain.css
+++ b/front-end/src/components/Complain.css
@@ -8,7 +8,6 @@
 }
 .card {
     /* width: 100%; */
-    z-index: 100;
     height: 50%;
     margin-left: auto;
     margin-right: auto;
